--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,8 @@
 <header>
     <nav>
-        <a href="/index.html">Inicio</a>
-        <a href="/index.html/nuevos_destacados.html">Nuevos Destacados</a>
-        <a href="/index.html/top_clasicos.html">Top Clásicos</a>
-        <a href="/index.html/por_genero.html">Por Género</a>
+        <a href="/">Inicio</a>
+        <a href="/nuevos_destacados.html">Nuevos Destacados</a>
+        <a href="/top_clasicos.html">Top Clásicos</a>
+        <a href="/por_genero.html">Por Género</a>
     </nav>
 </header>
