--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,10 +12,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/index.html/nuevos_destacados.html">Nuevos Destacados</a></li>
-            <li><a href="/index.html/top_clasicos.html">Top Clásicos</a></li>
-            <li><a href="/index.html/por_genero.html">Por Género</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/nuevos_destacados.html">Nuevos Destacados</a></li>
+            <li><a href="/top_clasicos.html">Top Clásicos</a></li>
+            <li><a href="/por_genero.html">Por Género</a></li>
         </ul>
     </nav>
     <div class="hero">
@@ -28,19 +28,19 @@
                 <h3>Nuevos Destacados</h3>
                 <img src="../../static/images/index/nuevo.jpg" alt="Nuevos Destacados">
                 <p>Descubre los videojuegos más recientes y emocionantes del mercado.</p>
-                <a href="/index.html/nuevos_destacados.html">Explorar</a>
+                <a href="/nuevos_destacados.html">Explorar</a>
             </div>
             <div class="card">
                 <h3>Top Clásicos</h3>
                 <img src="../../static/images/index/clasiscos.jpg" alt="Top Clásicos">
                 <p>Revive los clásicos que marcaron historia en el mundo gamer.</p>
-                <a href="/index.html/top_clasicos.html">Explorar</a>
+                <a href="/top_clasicos.html">Explorar</a>
             </div>
             <div class="card">
                 <h3>Por Género</h3>
                 <img src="../../static/images/index/generos.jpg" alt="Videojuegos por Género">
                 <p>Encuentra videojuegos según tus géneros favoritos.</p>
-                <a href="/index.html/por_genero.html">Explorar</a>
+                <a href="/por_genero.html">Explorar</a>
             </div>
         </div>
     </div>
