--- a/app/templates/por_genero.html
+++ b/app/templates/por_genero.html
@@ -12,10 +12,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/index.html/nuevos_destacados.html">Nuevos Destacados</a></li>
-            <li><a href="/index.html/top_clasicos.html">Top Clásicos</a></li>
-            <li><a href="/index.html/por_genero.html">Por Géneros</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/nuevos_destacados.html">Nuevos Destacados</a></li>
+            <li><a href="/top_clasicos.html">Top Clásicos</a></li>
+            <li><a href="/por_genero.html">Por Géneros</a></li>
         </ul>
     </nav>
     <div class="hero">
