Añadido mi lista

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal - Videojuegos</title>
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../../static/css/index.css">
 </head>
 <body>
     <header>
@@ -16,6 +16,7 @@
             <li><a href="/nuevos_destacados.html">Nuevos Destacados</a></li>
             <li><a href="/top_clasicos.html">Top Clásicos</a></li>
             <li><a href="/por_genero.html">Por Género</a></li>
+            <li><a href="/mi_lista.html">Mi Lista</a></li>
         </ul>
     </nav>
     <div class="hero">
