--- a/app/templates/nuevos_destacados.html
+++ b/app/templates/nuevos_destacados.html
@@ -16,6 +16,7 @@
             <li><a href="/nuevos_destacados.html">Nuevos Destacados</a></li>
             <li><a href="/top_clasicos.html">Top Clásicos</a></li>
             <li><a href="/por_genero.html">Por Géneros</a></li>
+            <li><a href="/mi_lista.html">Mi Lista</a></li>
         </ul>
     </nav>
 
