--- a/app/templates/mi_lista.html
+++ b/app/templates/mi_lista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Lista de Videojuegos</title>
-    <link rel="stylesheet" href="../../static/css/index.css">
+    <link rel="stylesheet" href="../../static/css/mi_lista.css">
 </head>
 <body>
     <header>
