--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Videojuegos Infinity</h1>
+        <h1>Titulo a cambiar</h1>
     </header>
     <nav>
         <ul>
